my 3rd changes with music

--- a/src/component/Navbar.css
+++ b/src/component/Navbar.css
@@ -1,7 +1,7 @@
 /* src/components/Navbar.css */
 
 .custom-navbar {
-  background-color: #ffffff;
+  background-color: #edf6f9;
   transition: all 0.3s ease;
   padding: 0.8rem 1rem;
 }
