--- a/src/component/Projectsection.css
+++ b/src/component/Projectsection.css
@@ -13,7 +13,7 @@
 .project-card {
   transition: transform 0.3s ease, box-shadow 0.3s ease;
   border-radius: 15px;
-  overflow: hidden;
+  
 }
 
 .project-card:hover {
@@ -24,4 +24,10 @@
 .project-card img {
   height: 200px;
   object-fit: cover;
+}
+@media (max-width: 667px) {
+  .project-card {
+    
+    position: absolute;
+  }
 }
